--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,2 +1,3 @@
-DB_URL = "jdbc:postgresql://localhost:5432/rpg"
+DB_URL = "jdbc:postgresql://localhost:5432/hmwk6"
+DB_USER = "postgres"
 DB_PASSWORD = "12356"
